exports[`<LockButton /> matches snapshot of when the app is in read-only mode 1`] = `
<span
  style={
    Object {
      "height": "48px",
    }
  }>
  <div
    data-for="lock-tip"
    data-tip={true}
    style={
      Object {
        "display": "inline-block",
      }
    }>
    <IconButton
      disableTouchRipple={false}
      disabled={true}
      iconStyle={Object {}}
      id="lockButton"
      label="Switch to edit mode"
      onTouchTap={[Function]}
      style={
        Object {
          "zIndex": 5,
        }
      }
      tooltipPosition="bottom-center"
      touch={false}>
      <ActionLock />
    </IconButton>
  </div>
  <ReactTooltip
    effect="solid"
    id="lock-tip"
    insecure={true}
    place="bottom"
    resizeHide={true}
    wrapper="div">
    <span>
      Switching back to edit mode
      <br />
      not supported yet
    </span>
  </ReactTooltip>
</span>
`;

exports[`<LockButton /> matches snapshot of when the app is not in read-only mode 1`] = `
<span
  style={
    Object {
      "height": "48px",
    }
  }>
  <div
    data-for="lock-tip"
    data-tip={true}
    style={
      Object {
        "display": "inline-block",
      }
    }>
    <IconButton
      disableTouchRipple={false}
      disabled={false}
      iconStyle={Object {}}
      id="lockButton"
      label="Switch to read-only mode"
      onTouchTap={[Function]}
      style={
        Object {
          "zIndex": 5,
        }
      }
      tooltipPosition="bottom-center"
      touch={false}>
      <ActionLockOpen />
    </IconButton>
  </div>
  <ReactTooltip
    effect="solid"
    id="lock-tip"
    insecure={true}
    place="bottom"
    resizeHide={true}
    wrapper="div">
    <span>
      Click to lock the snippet
      <br />
      (this will prevent further changes.)
    </span>
  </ReactTooltip>
</span>
`;
